--- a/sop-common/sop-gateway-common/src/main/resources/i18n/open/error_en.properties
+++ b/sop-common/sop-gateway-common/src/main/resources/i18n/open/error_en.properties
@@ -6,6 +6,7 @@ open.error_10000=Success
 # open.error_\uFF08\u524D\u7F00\uFF0920000\uFF08\u7F51\u5173\u9519\u8BEF\u7801\uFF09_isp.unknow-error\uFF08\u5B50\u9519\u8BEF\u7801\uFF09
 open.error_20000=Service is temporarily unavailable
 open.error_20000_isp.unknown-error=Service is temporarily unavailable
+open.error_20000_isp.service-unknown-error=Service not available
 open.error_20000_aop.unknown-error=Service is temporarily unavailable
 open.error_20000_isp.service-not-available=Service is temporarily unavailable
 open.error_20000_isp.gateway-response-timeout=Gateway response timeout
