--- a/sop-common/sop-gateway-common/src/main/resources/i18n/open/error_zh_CN.properties
+++ b/sop-common/sop-gateway-common/src/main/resources/i18n/open/error_zh_CN.properties
@@ -62,6 +62,7 @@ open.error_10000=Success
 # open.error_\uFF08\u524D\u7F00\uFF0920000\uFF08\u7F51\u5173\u9519\u8BEF\u7801\uFF09_isp.unknow-error\uFF08\u5B50\u9519\u8BEF\u7801\uFF09
 open.error_20000=\u670D\u52A1\u4E0D\u53EF\u7528
 open.error_20000_isp.unknown-error=\u670D\u52A1\u6682\u4E0D\u53EF\u7528
+open.error_20000_isp.service-unknown-error=\u670D\u52A1\u4E0D\u53EF\u7528
 open.error_20000_aop.unknown-error=\u670D\u52A1\u6682\u4E0D\u53EF\u7528
 open.error_20000_isp.service-not-available=\u670D\u52A1\u6682\u4E0D\u53EF\u7528
 open.error_20000_isp.gateway-response-timeout=\u7F51\u5173\u54CD\u5E94\u8D85\u65F6
