--- a/sop-common/sop-service-common/src/main/resources/i18n/isp/error_en.properties
+++ b/sop-common/sop-service-common/src/main/resources/i18n/isp/error_en.properties
@@ -1,4 +1,5 @@
-# 错误配置
+# \u9519\u8BEF\u914D\u7F6E
 
-isp.error_isp.unknown-error=Service is temporarily unavailable
+isp.error_isp.service-unknown-error=Service not unavailable
 isp.error_isv.invalid-parameter=Invalid parameter
+isp.error_isv.common-error=Service error
