--- a/sop-common/sop-service-common/src/main/resources/i18n/isp/error_zh_CN.properties
+++ b/sop-common/sop-service-common/src/main/resources/i18n/isp/error_zh_CN.properties
@@ -1,5 +1,6 @@
-# 错误配置
+# \u9519\u8BEF\u914D\u7F6E
 
-isp.error_isp.unknown-error=\u670d\u52a1\u6682\u4e0d\u53ef\u7528
-# 参数无效
-isp.error_isv.invalid-parameter=\u53c2\u6570\u65e0\u6548
+isp.error_isp.service-unknown-error=\u672A\u77E5\u9519\u8BEF
+# \u53C2\u6570\u65E0\u6548
+isp.error_isv.invalid-parameter=\u53C2\u6570\u65E0\u6548
+isp.error_isv.common-error=\u7CFB\u7EDF\u9519\u8BEF
